# Anthropic

./: pyproject.toml  requirements.txt  system_prompt.txt
Anthropic/: Introduction to agent skills.txt
Anthropic/Building with Claude api/: Accessing Claude with the API.md  Agents and workflows.md  Anthropic apps - Claude Code and co.md  Features of Claude.md  Model Context Protocol.md  Prompt engieering.txt  Prompt evaluation.txt  RAG and Agentic Search.md  TOOL USE WITH CLAUDE.md
Anthropic/Model Context Protocal/: Connecting with MCP clients.md  Hands-on with MCP servers.md  Introduction to Model Context Protol.md
frontend/: app.js  index.html  style.css
projects/: Business Overview Janmasethu U.docx  ottobon_course_platform_business_overview.docx
scripts/: build_hrag.py  debug_search.py  fix_indexes.sql  migrate_add_nodes.sql  query_hrag.py  server.py  setup_supabase.sql
src/: chunker.py  config.py  db.py  embedder.py  hrag_builder.py  loader.py  query.py  summarizer.py
