[project]
name = "hrag-anthropic"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.30.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.1.0",
    "langchain-text-splitters>=0.3.0",
    "rich>=13.0.0",
    "PyMuPDF>=1.25.0",
    "python-docx>=1.1.0",
    "flask",
    "flask-cors"
]

[tool.vercel]
entrypoint = "scripts.server:app"
